# Puzabrot

./: .clang-format  .clang-tidy  CMakeLists.txt  ConsolaFont.h  ConsolaFont.hpp  InputBox.h  LICENSE  Makefile  ProgressBar.h  Puzabrot  Puzabrot.cpp  Puzabrot.h  README.md  main.cpp
Calculator/: Calculator.cpp  Calculator.h  Operations.h
Tree/: Tree.h  Tree.ipp
include/: AST.h  Base2D.h  ComplexHolder.h  ComplexShader.h  ComplexSolver.h  Engine2D.h  Eventable.h  InputBox.h  Puzabrot.h  ShaderEngine.h  Tree.h  Utils.h  vec2.h
include/Application/: Application.h  Base2D.h  Engine2D.h  ShaderApplication.h
include/Calculator/: Calculator.h  Operation.h
include/Resource/: ConsolaFont.hpp
include/Tree/: Tree-impl.h  Tree.h
include/UI/: Button.h  FPS.h  InputBox.h  Label.h  SwitchButton.h  UI.h  Vidget.h
src/: Base2D.cpp  Calculator.cpp  ComplexHolder.cpp  ComplexShader.cpp  ComplexSolver.cpp  Engine2D.cpp  InputBox.cpp  Operation.cpp  Puzabrot.cpp  ShaderEngine.cpp  main.cpp
src/Application/: Application.cpp  Base2D.cpp  Engine2D.cpp  ShaderApplication.cpp
src/Calculator/: Calculator.cpp  Operation.cpp
src/UI/: Button.cpp  FPS.cpp  InputBox.cpp  Label.cpp  SwitchButton.cpp  UI.cpp  Vidget.cpp
